--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -108,14 +108,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animation.cs" />
-    <Compile Include="Units\Gunship.cs" />
-    <Compile Include="Units\Hydro.cs" />
-    <Compile Include="Units\Juggernaught.cs" />
-    <Compile Include="Units\Marine.cs" />
+    <Compile Include="Arena\Arena.cs" />
+    <Compile Include="Arena\Units\Gunship.cs" />
+    <Compile Include="Arena\Units\Hydro.cs" />
+    <Compile Include="Arena\Units\Juggernaught.cs" />
+    <Compile Include="Arena\Units\Marine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Units\Unit.cs" />
+    <Compile Include="Arena\Units\Unit.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
