Added a crap walk animation for marine (better than nothing) Marine shots pick a random part of enemy to hit, fixed the shot start location

--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Arena\Units\Unit.cs" />
     <Compile Include="UI.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
