Added base.png blocks and SE class

--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Arena\Units\Unit.cs" />
     <Compile Include="Puzzle\Block.cs" />
     <Compile Include="Puzzle\PuzzleGrid.cs" />
+    <Compile Include="SE.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
