--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Arena\Units\Marine.cs" />
     <Compile Include="Arena\Units\Target.cs" />
     <Compile Include="BloomPostProcess.cs" />
+    <Compile Include="GameScreen.cs" />
     <Compile Include="HealthBar.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="Puzzle\Block.cs" />
     <Compile Include="Puzzle\PuzzleGrid.cs" />
     <Compile Include="SE.cs" />
+    <Compile Include="TitleScreen.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
