--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -123,6 +123,9 @@
     <Compile Include="States\GameState.cs" />
     <Compile Include="HealthBar.cs" />
     <Compile Include="Music.cs" />
+    <Compile Include="Particles\DeathEmitter.cs" />
+    <Compile Include="Particles\Particle.cs" />
+    <Compile Include="Particles\PEmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
