Added Juggernaught and JugRider code

--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Arena\Units\Gunship.cs" />
     <Compile Include="Arena\Units\Hydro.cs" />
     <Compile Include="Arena\Units\Juggernaught.cs" />
+    <Compile Include="Arena\Units\JugRider.cs" />
     <Compile Include="Arena\Units\Marine.cs" />
     <Compile Include="Arena\Units\Target.cs" />
     <Compile Include="BloomPostProcess.cs" />
