Added uber embers

--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Arena\Units\JugRider.cs" />
     <Compile Include="Arena\Units\Marine.cs" />
     <Compile Include="Arena\Units\Target.cs" />
+    <Compile Include="Arena\Units\UberEmber.cs" />
     <Compile Include="BloomPostProcess.cs" />
     <Compile Include="Particles\EnemyDeathEmitter.cs" />
     <Compile Include="States\GameOverState.cs" />
