--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Arena\Units\UberEmber.cs" />
     <Compile Include="BloomPostProcess.cs" />
     <Compile Include="Particles\EnemyDeathEmitter.cs" />
+    <Compile Include="Puzzle\BlockLoader.cs" />
     <Compile Include="States\GameOverState.cs" />
     <Compile Include="States\GameState.cs" />
     <Compile Include="HealthBar.cs" />
