--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Puzzle\PuzzleGrid.cs" />
     <Compile Include="SE.cs" />
     <Compile Include="States\HelpScreen.cs" />
+    <Compile Include="States\SplashScreen.cs" />
     <Compile Include="States\StatePlaying.cs" />
     <Compile Include="States\TitleScreen.cs" />
     <Compile Include="States\WorldMap.cs" />
