Added time attack and removed UI in time attack mode, however the units are not drawing?

--- a/TTG/TTG/TTG/Windows Phone Copy of TTG.csproj
+++ b/TTG/TTG/TTG/Windows Phone Copy of TTG.csproj
@@ -100,6 +100,7 @@
     <Compile Include="States\SplashScreen.cs" />
     <Compile Include="States\StatePlaying.cs" />
     <Compile Include="States\TitleScreen.cs" />
+    <Compile Include="States\TimeAttack.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="Util\BitmapFont.cs" />
     <Compile Include="Util\FancyText.cs" />
