--- a/TTG/TTG/TTG/TTG.csproj
+++ b/TTG/TTG/TTG/TTG.csproj
@@ -133,6 +133,7 @@
     <Compile Include="States\HelpScreen.cs" />
     <Compile Include="States\SplashScreen.cs" />
     <Compile Include="States\StatePlaying.cs" />
+    <Compile Include="States\TimeAttack.cs" />
     <Compile Include="States\TitleScreen.cs" />
     <Compile Include="States\WorldMap.cs" />
     <Compile Include="UI.cs" />
